# Hydrosheaf

./: .gitignore  CHANGELOG.md  LICENSE  README.md  hydrosheaf_technical_document.tex  pyproject.toml
docs/: 3D_FLOW_NETWORKS_IMPLEMENTATION.md  EXTENSIONS_SUMMARY.md  REACTIVE_TRANSPORT_IMPLEMENTATION.md  TECHNICAL_REFERENCE.md  TEMPORAL_IMPLEMENTATION.md  UNCERTAINTY_IMPLEMENTATION.md  USER_GUIDE.md  examples.md  math.md  phreeqc.md
hydrosheaf/: __init__.py  cli.py  coda_sbp.py  config.py  isotopes.py  nitrate_source_v2.py
hydrosheaf/config/: nitrate_source_v2.yaml
hydrosheaf/data/: endmembers.py  minerals.py  qc.py  schema.py  units.py
hydrosheaf/databases/: nitrate_endmembers.json
hydrosheaf/examples/: demo_small_network.py  edges.csv  sample_data.csv
hydrosheaf/graph/: build.py  types.py
hydrosheaf/graph3d/: __init__.py  build_3d.py  constraints.py  distance.py  layers.py  types_3d.py
hydrosheaf/inference/: edge_fit.py  network_fit.py
hydrosheaf/models/: dictionary.py  ec_tds.py  exchange.py  fit_reactions.py  gibbs.py  nitrate_isotopes.py  reactions.py  redox.py  sheaf.py  transport.py
hydrosheaf/outputs/: export.py  interpret.py  (+2 more)
tests/: test_accuracy_3d.py  test_accuracy_reactive.py  test_accuracy_temporal.py  test_accuracy_uncertainty.py  test_coda_sbp.py  test_constraints.py  test_doc_examples.py  test_graph.py  test_graph_probabilistic.py  test_network_summary.py  test_nitrate_isotopes.py  test_phreeqc_integration.py  test_properties.py  test_qc.py  test_regression_small.py  test_sheaf.py  test_transport.py  test_uncertainty_integration.py
(+37 files in other folders)
