[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hydrosheaf"
version = "0.3.0"
description = "Sheaf-style groundwater hydrogeochemistry modeling."
readme = "README.md"
requires-python = ">=3.8"
authors = [
  {name = "Dickson Abdul-Wahab"},
  {name = "Ebenezer Aquisman Asare"},
]
dependencies = [
  "numpy>=1.20",
  "scipy>=1.7",
  "pandas>=1.3",
  "pymc>=5.0",
  "arviz>=0.15",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.7"]

[project.scripts]
hydrosheaf = "hydrosheaf.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["hydrosheaf*"]

[tool.setuptools.package-data]
hydrosheaf = ["databases/*.dat"]
